--- a/src/sass/app_2/_common/form/input_field.scss
+++ b/src/sass/app_2/_common/form/input_field.scss
@@ -3,11 +3,11 @@
     margin: 8px 0 0;
     font-weight: 300;
 
-    &:has(input[type=checkbox]) {
+    &:has(input[type=checkbox]), span.tooltip {
         display: inline-block;
     }
     span.tooltip {
-        display: inline-block;
+        width: 100%;
     }
     i {
         position: relative;
@@ -103,7 +103,8 @@
         color: $COLOR_LIGHT_BLACK;
         border: 1px solid $COLOR_GRAY;
         border-radius: $BORDER_RADIUS;
-        transition: all 0.3s;
+        text-align: center;
+        transition: transform 0.3s;
 
         &[type=checkbox] {
             cursor: pointer;
